# cuda

./: .gitignore  CMakeLists.txt  README.md
include/: cuda_primes.h  flag.h  parallel_primes.h
src/: cuda_primes.cu  main.cpp  parallel_primes.cpp  prime.cu
